--- a/.github/workflows/build-XiaoxinSGSIs.yml
+++ b/.github/workflows/build-XiaoxinSGSIs.yml
@@ -47,7 +47,7 @@ jobs:
          with:
            repository: "xiaoxindada/SGSI-build-tool"
            latest: true
-           fileName: "SGSI-build-tool.tar"
+           fileName: "SGSI-build-tool-11.tar"
            
        - name: Initialization environment
          run: |
